--- a/404.html
+++ b/404.html
@@ -7,8 +7,8 @@
         <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://anees009.github.io/404.html" /><meta property="og:site_name" content="Cloud &amp; Containers" />
-
+<meta property="og:url" content="https://anees009.github.io/404.html" />
+<meta property="og:site_name" content="Cloud &amp; Containers" />
 
         <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
